<?xml version="1.0"?>
<package>
  <name>aeplanner</name>
  <version>1.0.0</version>
  <description>The Autonomous Exploration Planner package</description>

  <maintainer email="magse761@student.liu.se">Magnus Selin</maintainer>

  <license>BSD-3-Clause</license>

  <author>Magnus Selin</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>genmsg</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>kdtree</build_depend>
  <build_depend>pigain</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>kdtree</run_depend>
  <run_depend>pigain</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
